2005-10-01  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (get_exit_lock): Use myself.lock rather than exit_lock.
	* exceptions.cc (exit_lock): Delete.
	(events_init): Don't init exit_lock.
	* (_pinfo::commune_process): Add per-PICOM debugging.
	* sigproc.cc (talktome): Add some temporary debugging statements.

	* fhandler_proc.cc (format_proc_cpuinfo): Cosmetic change.
	(format_proc_partitions): Ditto.
	* syscalls.cc (locked_append): Ditto.

2005-09-30  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (do_exit): Don't set ES_SET_MUTO here.  Call get_exit_lock()
	instead.
	(get_exit_lock): New function.  Grabs the lock and sets initial
	exit_state.
	* exceptions.cc (try_to_debug): Use low_priority_sleep.
	(sigpacket::process): Avoid handler if this is an exec stub.
	(signal_exit): Use get_exit_lock rather than manipulating the exit_lock
	critical section directly.
	* pinfo.cc (pinfo::exit): Ditto.
	* winsup.h (get_exit_lock): Declare.
	(exit_lock): Delete declaration.

2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc: Change calls to pc.set_attributes into
	calls to pc.file_attributes throughout.
	* path.h (class path_conv): Remove superfluous set_attributes method.

2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::get_drive_info): Use
	fhandler method to access major device number.  Add comment to
	explain floppy weirdness.

2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Also use
	attributes stored in this->pc if call to GetFileInformationByHandle
	failed.

2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Only write
	attributes if call to GetFileInformationByHandle was successful.

2005-09-29  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (frok::parent): Simplify error messages.  Don't issue an
	error when child.remember fails.